frontend/test/should_pass/method_model_inh_ovrrd.gm
node class N
{
	counter:int;
	
	function foo(var x:int) : int
	{
		return (this.counter + x);
	}
	
	procedure bar(var x:int, var y:int) : (int, int)
	{
		return (this.counter + x, this.counter - y);
	}	
	
	procedure baz()
	{
		this.counter = this.counter + 1;
		def var x:int = 1;
		(x,this.counter) = this.bar(this.counter,x);
		return;
	}
	
	function qux() : string
	{
		return("42");
	}
}

node class NN extends N
{
	name:string;
	
	function foo(var x:int) : int
	{
		return (this.counter + x);
	}
	
	procedure bar(var x:int, var y:int) : (int, int)
	{
		return (this.counter + x, this.counter - y);
	}	

	procedure baz()
	{
		this.counter = this.counter + 1;
		this.name = this.name + "baz";
		def var x:int = 1;
		(x,this.counter) = this.bar(this.counter,x);
		return;
	}
	
	function qux() : string
	{
		return(this.counter != this.foo(this.counter) ? this.name : this.name + "42");
	}
}

edge class E
{
	counter:int;
	
	function foo(var x:int) : int
	{
		return (this.counter + x);
	}
	
	procedure bar(var x:int, var y:int) : (int, int)
	{
		return (this.counter + x, this.counter - y);
	}	

	procedure baz()
	{
		this.counter = this.counter + 1;
		def var x:int = 1;
		(x,this.counter) = this.bar(this.counter,x);
		return;
	}
	
	function qux() : string
	{
		return("42");
	}
}

edge class EE extends E
{
	name:string;

	function foo(var x:int) : int
	{
		return (this.counter + x);
	}
	
	procedure bar(var x:int, var y:int) : (int, int)
	{
		return (this.counter + x, this.counter - y);
	}	
	
	procedure baz()
	{
		this.counter = this.counter + 1;
		this.name = this.name + "baz";
		def var x:int = 1;
		(x,this.counter) = this.bar(this.counter,x);
		return;
	}
	
	function qux() : string
	{
		return(this.counter != this.foo(this.counter) ? this.name : this.name + "42");
	}
}
